...
            <objects>
                <navigationController id="fYK-1z-4ke" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Share" image="Share" id="lmh-3j-dWp"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dms-PM-l8p">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
                                <rect key="frame" x="0.0" y="292" width="320" height="227"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" label="beginSharingButton"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Choose Friends" id="Nyi-qV-pNl">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Ffw-cp-h4U" userLabel="done">
                            <connections>
...
                                <animations/>
                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="pickMeUpButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="74" id="DI2-dw-rb6"/>
...
                                    <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                                    <animations/>
                                    <accessibility key="accessibilityConfiguration" label="selectFriendsButton"/>
                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
                                    <state key="normal" title="Choose Friends"/>
...
                                                    <rect key="frame" x="0.0" y="0.0" width="160" height="43"/>
                                                    <animations/>
                                                    <state key="normal" title="Select Time"/>
                                                    <connections>
                                                        <action selector="selectTimePressed:" destination="gmA-Cj-GkQ" eventType="touchUpInside" id="sx9-ZD-WD3"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                        <state key="normal" title="Stop Receiving Updates">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Receiver" id="p0c-P7-T21"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="John Smith" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j8R-0W-Agg">
                                                    <rect key="frame" x="223" y="12" width="82" height="20"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Log Out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="QjB-lU-IUw">
                                                    <rect key="frame" x="15" y="0.0" width="290" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Settings" id="krq-2v-gVg"/>
                    <connections>
                        <outlet property="logOutCell" destination="trT-SE-42W" id="mX3-It-AfG"/>
...
