...
                                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="32"/>
                                        <state key="normal" title="Sign Up">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <segue destination="1rj-M2-pzY" kind="push" identifier="Register" id="k0x-Wd-anK"/>
                                        </connections>
                                    </button>
...
                                        <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="32"/>
                                        <state key="normal" title="Log In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="32"/>
                                <size key="titleShadowOffset" width="0.0" height="-1"/>
                                <state key="normal" title="Debug Login">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                                </textField>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahs-cW-uhj">
                                                    <rect key="frame" x="8" y="7" width="104" height="29"/>
                                                    <animations/>
...
                                                    <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                                </textField>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qtj-oa-2FW">
                                                    <rect key="frame" x="8" y="7" width="104" height="29"/>
                                                    <animations/>
...
                                                    <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                                </textField>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csc-RM-2Ep">
                                                    <rect key="frame" x="8" y="7" width="104" height="29"/>
                                                    <animations/>
...
                                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                </textField>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lr9-dz-wEI">
                                                    <rect key="frame" x="8" y="7" width="104" height="29"/>
                                                    <animations/>
...
